--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Security-Policy"
       content="default-src 'self';
-               script-src 'self' 'unsafe-inline' 'unsafe-eval';
+               script-src 'self' 'unsafe-inline' 'unsafe-eval' blob: data:;
                style-src 'self' 'unsafe-inline';
+               worker-src 'self' blob: data:;
                connect-src 'self' https://api.elevenlabs.io https://api-free.deepl.com https://generativelanguage.googleapis.com https://meetlens-backend-5ptfw.ondigitalocean.app wss://meetlens-backend-5ptfw.ondigitalocean.app ws://localhost:8000 http://localhost:8000;
                img-src 'self' data:;" />
     <title>MeetLens - Meeting Transcription</title>
